...
                                        <rect key="frame" x="24.999999999999993" y="359.33333333333331" width="93.333333333333314" height="78"/>
                                        <constraints>
                                            <constraint firstAttribute="width" secondItem="6Pp-Ya-hFo" secondAttribute="height" multiplier="6:5" id="O6A-5o-8xp"/>
                                        </constraints>
                                        <state key="normal" title="Button"/>
                                        <buttonConfiguration key="configuration" style="plain">
                                            <imageReference key="image" image="airplane.departure" catalog="system" symbolScale="large"/>
                                            <color key="baseForegroundColor" name="neon_white"/>
                                        </buttonConfiguration>
                                        <connections>
                                            <segue destination="VTh-ec-Rtz" kind="presentation" identifier="flightsToList" modalPresentationStyle="fullScreen" id="hzO-HA-6gQ"/>
                                        </connections>
                                    </button>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Flights" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kmM-oU-9D4">
                                        <rect key="frame" x="24.999999999999993" y="444.33333333333331" width="93.333333333333314" height="21.666666666666686"/>
                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
                                        <color key="textColor" name="neon_white"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Wei-E3-OUH">
                                        <rect key="frame" x="143.33333333333334" y="359.33333333333331" width="88.666666666666657" height="75.333333333333314"/>
                                        <state key="normal" title="Button"/>
                                        <buttonConfiguration key="configuration" style="plain">
                                            <imageReference key="image" image="house.lodge.fill" catalog="system" symbolScale="large"/>
                                            <color key="baseForegroundColor" name="neon_white"/>
                                        </buttonConfiguration>
                                        <connections>
                                            <segue destination="VTh-ec-Rtz" kind="presentation" identifier="hotelsToList" modalPresentationStyle="fullScreen" id="h3I-Ou-ldo"/>
                                        </connections>
                                    </button>
...
